fix: fix broken style on action panel long title

--- a/src/components/adslot-ui/ActionPanel/styles.scss
+++ b/src/components/adslot-ui/ActionPanel/styles.scss
@@ -43,6 +43,7 @@
     border: $border-lighter;
 
     .title {
+      @include ellipse;
       font-size: $font-size-header;
       font-weight: $font-weight-bold;
     }
